--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hotkeys": "^2.0.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
